# polymarket-weather-trading

./: .gitignore  README.md  asd.txt  config.master_db.yaml  config.yaml  locations.csv  master_db.py  pyproject.toml  requirements.txt  test.ipynb
bias_correction/: __init__.py  config.example.yaml  config.py  discovery.py  logging_utils.py  obs.py  pipeline.py  run_bias_correction.py  schema.py  stage_a.py  stage_b.py
data_gatherer/: .gitignore  README.md  VPS_SETUP.md  config.example.json  observations_scraper.md  observations_scraper.py  polymarket_archive.py  polymarket_archive.sqlite3-shm  polymarket_archive.sqlite3-wal  pyproject.toml  run_archiver.ps1  run_archiver.sh  schema.sql  stop_archiver.ps1
data_gatherer/deploy/: polymarket-archiver.service
data_gatherer/ecmwf_forecast_gatherer/: ecmwf_forecast_download.py
data_gatherer/gfs_archiver/: gfs_forecast_archiver.py
data_gatherer/gfs_forecast_gatherer/: gfs_forecast_download.py
data_gatherer/polymarket_archive/: cli.py  clob_client.py  config.py  data_client.py  db.py  discovery.py  gamma_client.py  http.py  ingest_markets.py  ingest_trades.py  jobs.py  log.py  models.py  utils.py
data_gatherer/polymarket_archive/ddl/: schema.sql
data_gatherer/tests/: __init__.py  test_polymarket_archive.py
data_gatherer/wunderground_observation_gatherer/: observations_scraper.py
deploy/: polymarket-gfs-cycle-trigger.service  polymarket-gfs-cycle-trigger.timer  polymarket-paper-canary.service
ecmwf-ensemble_gatherer/: README.md  download_pipeline.py  streaming_parquet_pipeline.py
live_trading/: LIVE_GO_LIVE_CHECKLIST.md  LIVE_ROLLBACK_PLAYBOOK.md  README.md  __init__.py  config.live_pilot.yaml  db.py  (+9 more)
(+69 files in other folders)
