[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-weather-archiver"
version = "0.1.0"
description = "Archive Polymarket weather contracts into SQLite."
requires-python = ">=3.11"
readme = "README.md"

[project.scripts]
polymarket-archiver = "polymarket_archive:main"

[tool.setuptools]
py-modules = ["polymarket_archive"]
