[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-weather-archiver"
version = "0.2.0"
description = "Archive Polymarket weather contracts into a parquet dataset."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "pandas>=2.0",
  "pyarrow>=14",
]

[project.scripts]
polymarket-archiver = "polymarket_archive:main"

[tool.setuptools]
py-modules = ["polymarket_archive"]
